--- a/SmarkPark/SmarkPark/Controller/Home/HomeViewController.xib
+++ b/SmarkPark/SmarkPark/Controller/Home/HomeViewController.xib
@@ -64,7 +64,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXE-Fq-eqg">
-                                    <rect key="frame" x="60" y="60.5" width="0.0" height="0.0"/>
+                                    <rect key="frame" x="10" y="60.5" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -170,7 +170,6 @@
                                 <constraint firstItem="zkJ-ba-Qvl" firstAttribute="leading" secondItem="liu-wC-XTf" secondAttribute="trailing" constant="10" id="VdG-zu-kmb"/>
                                 <constraint firstItem="QFh-kj-H35" firstAttribute="top" secondItem="gZd-9p-Cug" secondAttribute="top" constant="40" id="ZMy-ti-hYJ"/>
                                 <constraint firstItem="wjO-Q5-Ogv" firstAttribute="leading" secondItem="QFh-kj-H35" secondAttribute="leading" id="cOz-rL-Nz5"/>
-                                <constraint firstItem="IXE-Fq-eqg" firstAttribute="leading" secondItem="QFh-kj-H35" secondAttribute="trailing" constant="10" id="co8-PW-um0"/>
                                 <constraint firstItem="asy-0V-4RA" firstAttribute="centerX" secondItem="gZd-9p-Cug" secondAttribute="centerX" id="ctS-dW-N3R"/>
                                 <constraint firstAttribute="height" constant="160" id="dII-ZQ-oXf"/>
                                 <constraint firstItem="wjO-Q5-Ogv" firstAttribute="top" secondItem="QFh-kj-H35" secondAttribute="bottom" constant="15" id="mx9-Ji-qk1"/>
@@ -178,6 +177,7 @@
                                 <constraint firstItem="VNd-dv-sTX" firstAttribute="leading" secondItem="zkJ-ba-Qvl" secondAttribute="trailing" constant="2" id="tA1-lB-nr5"/>
                                 <constraint firstItem="asy-0V-4RA" firstAttribute="top" secondItem="gZd-9p-Cug" secondAttribute="top" constant="10" id="tzG-J6-eQM"/>
                                 <constraint firstItem="VNd-dv-sTX" firstAttribute="trailing" secondItem="dgE-QK-j9w" secondAttribute="trailing" id="yYN-w3-OLA"/>
+                                <constraint firstItem="IXE-Fq-eqg" firstAttribute="trailing" secondItem="wjO-Q5-Ogv" secondAttribute="trailing" id="ycj-8F-jwl"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
