--- a/SmarkPark/SmarkPark/Controller/Find/EnsureCancelController.xib
+++ b/SmarkPark/SmarkPark/Controller/Find/EnsureCancelController.xib
@@ -30,7 +30,7 @@
                     <rect key="frame" x="20" y="30" width="335" height="210"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rvG-Yc-PdL">
-                            <rect key="frame" x="8" y="8" width="319" height="35"/>
+                            <rect key="frame" x="0.0" y="8" width="335" height="35"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请选择取消原因" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQO-kT-tW1">
                                     <rect key="frame" x="12" y="9.5" width="93" height="16"/>
@@ -39,7 +39,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="about_report_type" translatesAutoresizingMaskIntoConstraints="NO" id="IUE-E6-P5N">
-                                    <rect key="frame" x="305" y="12" width="6" height="11"/>
+                                    <rect key="frame" x="321" y="12" width="6" height="11"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -53,16 +53,13 @@
                             </constraints>
                         </view>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Wuk-MP-b5V">
-                            <rect key="frame" x="8" y="51" width="319" height="150"/>
+                            <rect key="frame" x="0.0" y="51" width="335" height="159"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="150" id="aYg-et-6Rr"/>
-                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入您想要取消的原因!(限200字)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0z-wx-ORm">
-                            <rect key="frame" x="16" y="59" width="210.5" height="16"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入您想要取消的原因(限200字)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0z-wx-ORm">
+                            <rect key="frame" x="16" y="59" width="206.5" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="16" id="V3S-q6-a2P"/>
                             </constraints>
@@ -71,7 +68,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="200" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ro-60-HwE">
-                            <rect key="frame" x="285" y="184" width="42" height="17"/>
+                            <rect key="frame" x="293" y="193" width="42" height="17"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="42" id="M4c-4N-vfw"/>
                             </constraints>
@@ -87,21 +84,22 @@
                             </constraints>
                         </tableView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="h0z-wx-ORm" firstAttribute="top" secondItem="rvG-Yc-PdL" secondAttribute="bottom" constant="16" id="6jt-eA-dAh"/>
+                        <constraint firstItem="rvG-Yc-PdL" firstAttribute="leading" secondItem="PLl-sk-Pc0" secondAttribute="leading" id="89S-Tk-K09"/>
+                        <constraint firstAttribute="trailing" secondItem="Wuk-MP-b5V" secondAttribute="trailing" id="AlG-Qm-sp0"/>
                         <constraint firstItem="rvG-Yc-PdL" firstAttribute="top" secondItem="PLl-sk-Pc0" secondAttribute="top" constant="8" id="LYe-TM-Vvr"/>
                         <constraint firstItem="h0z-wx-ORm" firstAttribute="leading" secondItem="PLl-sk-Pc0" secondAttribute="leading" constant="16" id="RKt-iN-xJx"/>
-                        <constraint firstAttribute="trailing" secondItem="rvG-Yc-PdL" secondAttribute="trailing" constant="8" id="TxL-bO-IR5"/>
                         <constraint firstAttribute="height" constant="210" id="a9B-Gt-9dx"/>
-                        <constraint firstItem="rvG-Yc-PdL" firstAttribute="leading" secondItem="PLl-sk-Pc0" secondAttribute="leading" constant="8" id="b87-Qq-Hgp"/>
-                        <constraint firstAttribute="trailing" secondItem="Wuk-MP-b5V" secondAttribute="trailing" constant="8" id="dra-LQ-ESm"/>
+                        <constraint firstAttribute="trailing" secondItem="rvG-Yc-PdL" secondAttribute="trailing" id="e3g-Ie-4ms"/>
                         <constraint firstItem="Uhp-4H-vlR" firstAttribute="centerY" secondItem="rvG-Yc-PdL" secondAttribute="bottom" id="gV9-sw-H4a"/>
                         <constraint firstItem="7Ro-60-HwE" firstAttribute="trailing" secondItem="Wuk-MP-b5V" secondAttribute="trailing" id="l4u-wd-YhT"/>
                         <constraint firstItem="Wuk-MP-b5V" firstAttribute="top" secondItem="rvG-Yc-PdL" secondAttribute="bottom" constant="8" id="mOy-Oa-LKP"/>
                         <constraint firstItem="7Ro-60-HwE" firstAttribute="bottom" secondItem="Wuk-MP-b5V" secondAttribute="bottom" id="mpN-tj-4vf"/>
-                        <constraint firstItem="Wuk-MP-b5V" firstAttribute="leading" secondItem="PLl-sk-Pc0" secondAttribute="leading" constant="8" id="nWe-I9-PNe"/>
+                        <constraint firstItem="Wuk-MP-b5V" firstAttribute="leading" secondItem="PLl-sk-Pc0" secondAttribute="leading" id="nCn-aA-9uV"/>
                         <constraint firstItem="Uhp-4H-vlR" firstAttribute="leading" secondItem="PLl-sk-Pc0" secondAttribute="leading" constant="8" id="rzm-tc-DMH"/>
+                        <constraint firstAttribute="bottom" secondItem="Wuk-MP-b5V" secondAttribute="bottom" id="xO7-nY-oGe"/>
                         <constraint firstAttribute="trailing" secondItem="Uhp-4H-vlR" secondAttribute="trailing" constant="8" id="yxQ-Dp-gv2"/>
                     </constraints>
                 </view>
