--- a/SmarkPark/SmarkPark/Controller/Find/View/FindCarportCell.xib
+++ b/SmarkPark/SmarkPark/Controller/Find/View/FindCarportCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,8 +20,12 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Find_location" translatesAutoresizingMaskIntoConstraints="NO" id="ssc-1D-tUO">
-                        <rect key="frame" x="15" y="10" width="16" height="16"/>
+                        <rect key="frame" x="15" y="10" width="18" height="18"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="18" id="BQT-qw-3X0"/>
+                            <constraint firstAttribute="width" secondItem="ssc-1D-tUO" secondAttribute="height" multiplier="1:1" id="cXf-Ei-DMC"/>
+                        </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="WTw-J8-IGc">
                         <rect key="frame" x="281" y="50" width="24" height="24"/>
@@ -30,25 +35,25 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="位置" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w0H-Je-3HO">
-                        <rect key="frame" x="41" y="10" width="29" height="17"/>
+                        <rect key="frame" x="43" y="11.5" width="29" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.039215686270000001" green="0.039215686270000001" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="空闲时间：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIn-YF-Hyd">
-                        <rect key="frame" x="41" y="55" width="61.5" height="14.5"/>
+                        <rect key="frame" x="43" y="55" width="228" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="价格：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PV5-d6-BjZ">
-                        <rect key="frame" x="41" y="74.5" width="37" height="14.5"/>
+                        <rect key="frame" x="43" y="74.5" width="228" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="由车主XX提供车位" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEJ-My-ed2">
-                        <rect key="frame" x="41" y="94" width="102.5" height="14.5"/>
+                        <rect key="frame" x="43" y="94" width="228" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -63,8 +68,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="QpC-fu-lIK" secondAttribute="bottom" id="3DQ-cl-QNT"/>
+                    <constraint firstItem="nEJ-My-ed2" firstAttribute="trailing" secondItem="DIn-YF-Hyd" secondAttribute="trailing" id="53T-VC-xcI"/>
                     <constraint firstItem="nEJ-My-ed2" firstAttribute="top" secondItem="PV5-d6-BjZ" secondAttribute="bottom" constant="5" id="Ag2-gh-gEO"/>
                     <constraint firstAttribute="trailing" secondItem="WTw-J8-IGc" secondAttribute="trailing" constant="15" id="ElW-MY-SLX"/>
+                    <constraint firstItem="WTw-J8-IGc" firstAttribute="leading" secondItem="DIn-YF-Hyd" secondAttribute="trailing" constant="10" id="I4e-qH-2Ce"/>
                     <constraint firstItem="w0H-Je-3HO" firstAttribute="leading" secondItem="ssc-1D-tUO" secondAttribute="trailing" constant="10" id="NLN-TR-Nn2"/>
                     <constraint firstItem="PV5-d6-BjZ" firstAttribute="leading" secondItem="DIn-YF-Hyd" secondAttribute="leading" id="OVC-99-KJ4"/>
                     <constraint firstItem="WTw-J8-IGc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="THs-OO-UX1"/>
@@ -75,11 +82,18 @@
                     <constraint firstItem="WTw-J8-IGc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="w0H-Je-3HO" secondAttribute="trailing" constant="5" id="gsF-3L-8pZ"/>
                     <constraint firstAttribute="bottom" secondItem="nEJ-My-ed2" secondAttribute="bottom" constant="15" id="nrA-Th-FdC"/>
                     <constraint firstItem="QpC-fu-lIK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="rII-hj-7d8"/>
+                    <constraint firstItem="PV5-d6-BjZ" firstAttribute="trailing" secondItem="DIn-YF-Hyd" secondAttribute="trailing" id="u69-m2-ZYX"/>
                     <constraint firstItem="QpC-fu-lIK" firstAttribute="trailing" secondItem="WTw-J8-IGc" secondAttribute="trailing" id="v6x-lw-GPV"/>
                     <constraint firstItem="DIn-YF-Hyd" firstAttribute="leading" secondItem="w0H-Je-3HO" secondAttribute="leading" id="vuV-d1-Fgo"/>
                     <constraint firstItem="ssc-1D-tUO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="z47-j2-2yw"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="location" destination="w0H-Je-3HO" id="UHY-t1-G48"/>
+                <outlet property="owner" destination="nEJ-My-ed2" id="C6X-Hf-Qg6"/>
+                <outlet property="price" destination="PV5-d6-BjZ" id="Kdn-0w-ugw"/>
+                <outlet property="time" destination="DIn-YF-Hyd" id="Bow-bS-rjv"/>
+            </connections>
             <point key="canvasLocation" x="34" y="94"/>
         </tableViewCell>
     </objects>
